src/snapshots/xmark__summary__tests__add_space_for_multi_line_chapter_names.snap
---
source: src/summary.rs
expression: got
---
- chapter:
    name: Chapter title
    location: "./chapter.md"
    nested_items_path: []
  nested_items: []
  section_number:
    - 1
