src/snapshots/xmark__summary__tests__an_empty_link_location_is_a_draft_chapter.snap
---
source: src/summary.rs
expression: got.unwrap()
---
- chapter:
    name: Empty
    location: ~
  nested_items: []
  section_number:
    - 1
