src/snapshots/xmark__summary__tests__can_have_a_subheader_between_nested_items.snap
---
source: src/summary.rs
expression: got
---
- chapter:
    name: First
    location: "./first.md"
    nested_items_path: []
  nested_items: []
  section_number:
    - 1
- chapter:
    name: Second
    location: "./second.md"
    nested_items_path: []
  nested_items: []
  section_number:
    - 2
