src/snapshots/xmark__summary__tests__parse_nested_numbered_chapters.snap
---
source: src/summary.rs
expression: got
---
- chapter:
    name: First
    location: "./first.md"
    nested_items_path: []
  nested_items:
    - chapter:
        name: Nested
        location: "./nested.md"
        nested_items_path: []
      nested_items: []
      section_number:
        - 1
        - 1
  section_number:
    - 1
- chapter:
    name: Second
    location: "./second.md"
    nested_items_path: []
  nested_items: []
  section_number:
    - 2
